--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -57,3 +57,10 @@ $color-success:             #2cde2c;
 $color-warning:             #cf8600;
 $color-important:           #d00;
 $color-notice:              #66b;
+
+
+
+$bl: #00b0ff;
+$wh: #fff;
+$blk: #000;
+$gry: #a0a0a0;
