--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -7,3 +7,8 @@
 // styled using ID selectors but take the time to think about the elements
 // that are common across all components of the page and use class selectors
 // where appropriate.
+
+
+@import 'tabs';
+@import "header";
+@import "board-box";
