--- a/src/scss/atoms/_index.scss
+++ b/src/scss/atoms/_index.scss
@@ -13,3 +13,7 @@
 @import "links";
 @import "text";
 @import "images";
+@import "video-serfer";
+@import "arrow";
+@import "ul-wave";
+@import "stars";
