--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -12,3 +12,8 @@
 @import 'tabs';
 @import "header";
 @import "board-box";
+@import "about";
+@import "team";
+@import "latest-updates";
+@import "footer";
+@import "fb-wraper";
