--- a/src/scss/molecules/_index.scss
+++ b/src/scss/molecules/_index.scss
@@ -8,3 +8,11 @@
 // together to create a search form molecule.
 //
 // @source - http://atomicdesign.bradfrost.com/chapter-2/
+
+@import "about-content";
+@import "team-member";
+@import "updates-block";
+@import "instagram";
+@import "subscribe-form";
+@import "facebook";
+@import "friends";
