--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -64,3 +64,7 @@ $bl: #00b0ff;
 $wh: #fff;
 $blk: #000;
 $gry: #a0a0a0;
+$d-gray: #8c8c8c;
+$shadow: 0px -8px 30px 0px rgba(0, 0, 0, 0.34);
+$b-shadow: 10px 17px 50px 0px rgba(0, 0, 0, 0.3);
+
