--- a/src/scss/atoms/_images.scss
+++ b/src/scss/atoms/_images.scss
@@ -6,18 +6,32 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  }
+  cursor: pointer;
+}
 
 .img-board-view {
   margin: 2px;
   border: 2px solid transparent;
-  box-sizig: border-box;
+  box-sizing: border-box;
   transition: all .4s ease;
   &:hover {
-    border: 2px solid $bl;
+    border-color: $bl;
   }
 
   &.active {
-    border: 2px solid $bl;
+    border-color: $bl;
   }
 }
+
+.f-logo{
+  float: left;
+}
+
+.friend{
+  border: 1px solid transparent;
+  cursor: pointer;
+  &:hover{
+    border-color: $blk;
+  }
+}
+
