--- a/src/scss/atoms/_text.scss
+++ b/src/scss/atoms/_text.scss
@@ -4,7 +4,7 @@
   text-align: center;
   color: $blk;
   font-family: Montserra;
-  line-height: 0.8em;
+  line-height: 40px;
   font-style: italic;
   margin: 15% 0;
   font-size: 50px;
@@ -25,4 +25,85 @@
 .price{
   font-weight: 700;
   font-size: 24px;
+}
+
+.about-cursive{
+  color: $blk;
+  font-size: 16px;
+  font-style: italic;
+  text-align: left;
+  line-height: 32px;
+}
+
+.header-cursive{
+  font-family: Montserrat;
+  text-transform: uppercase;
+  color: $blk;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.team-member-name{
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Montserrat;
+  color: $bl;
+}
+
+.team-member-place, .team-member-nick{
+  font-family: Raleway;
+  font-size: 14px;
+  color: $d-gray;
+}
+
+.h2-team{
+  font-family: Montserrat;
+  color: #eee;
+  font-size: 190px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+  margin-top: 10%;
+  transform: translateY(33%);
+}
+
+.updates-text{
+  padding: 20px;
+  color: #787878;
+  font-family: Raleway;
+  line-height: 24px;
+}
+
+.copyright{
+  color: #4d4d4d;
+  font-size: 12px;
+  grid-column: 1/3;
+}
+
+.p-facebook{
+  color: $wh;
+  font-size: 32px;
+  text-align: center;
+  font-family: Helvetica;
+  font-weight: 700;
+  margin: 5%;
+}
+
+.f-profile-name{
+  font-size: 18px;
+  color: $wh;
+  line-height: 18px;
+  padding: 10px;
+}
+
+.likes-number{
+  font-size: 12px;
+}
+
+.friends-liked{
+  margin: 0;
+  font-size: 12px;
+  color: #4b4f56;
 }
