--- a/src/scss/layout/_board-box.scss
+++ b/src/scss/layout/_board-box.scss
@@ -9,12 +9,13 @@
   background-image: url(../img/Corner.png);
   background-size: contain;
   background-repeat: no-repeat;
-  box-shadow: 0px -8px 30px 0px rgba(0, 0, 0, 0.34);
+  box-shadow: $shadow;
   padding: 30px;
 
 }
 
 .info{
+
   width: 50%;
   padding: 0 40px;
 }
