--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -98,10 +98,9 @@ ul{
 
 .wraper{
 	background-image: url("../img/Hero.png");
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	width: 100%;
-	height: 700px;
 }
 
 .content{
